ui(table): make striped table styles globally available

--- a/src/index.css
+++ b/src/index.css
@@ -329,8 +329,22 @@ main {
   background-color: var(--bs-gray-800);
 }
 
-/* Navbar Styles */
+/* Table Styles */
+table.striped tr:nth-child(2n) td {
+  background-color: var(--bs-gray-100);
+}
+:root[data-theme='dark'] table.striped tr:nth-child(2n) td {
+  background-color: var(--bs-gray-800);
+}
 
+table.striped tr:hover td {
+  background-color: var(--bs-gray-200) !important;
+}
+:root[data-theme='dark'] table.striped tr:hover td {
+  background-color: var(--bs-gray-700) !important;
+}
+
+/* Navbar Styles */
 #mainNav .nav-link {
   font-weight: 600 !important;
 }
