ui(EarnReport): improve mobile view

--- a/src/components/Orderbook.module.css
+++ b/src/components/Orderbook.module.css
@@ -43,7 +43,7 @@
   }
 }
 
-:root[data-theme='dark'] .overlayContainer .orderbookContainer > .titleBar {
+:root[data-theme='dark'] .overlayContainer .orderbookContainer .titleBar {
   background-color: var(--bs-gray-800);
 }
 
