--- a/src/components/EarnReport.module.css
+++ b/src/components/EarnReport.module.css
@@ -6,12 +6,13 @@
 .overlayContainer .earnReportContainer {
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 0.5rem;
   background-color: var(--bs-body-bg);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 992px) {
   .overlayContainer .earnReportContainer {
+    gap: 1.5rem;
     padding: 2rem;
     border-radius: 0.5rem;
   }
@@ -24,25 +25,25 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  padding: 0 0 0.8rem 0;
+  padding: 0 0.5rem 0.8rem 0.5rem;
   background-color: var(--bs-gray-100);
 }
 
-@media only screen and (min-width: 768px) {
-  .overlayContainer .earnReportContainer > .titleBar {
-    align-items: center;
+@media only screen and (min-width: 992px) {
+  .overlayContainer .earnReportContainer .titleBar {
     padding: 0.8rem 1rem;
     border-radius: 0.6rem;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .overlayContainer .earnReportContainer > .titleBar {
+  .overlayContainer .earnReportContainer .titleBar {
+    align-items: center;
     flex-direction: row;
   }
 }
 
-:root[data-theme='dark'] .overlayContainer .earnReportContainer > .titleBar {
+:root[data-theme='dark'] .overlayContainer .earnReportContainer .titleBar {
   background-color: var(--bs-gray-800);
 }
 
