--- a/src/components/LogOverlay.module.css
+++ b/src/components/LogOverlay.module.css
@@ -6,31 +6,31 @@
 .overlayContainer .logContentContainer {
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 0.5rem;
   background-color: var(--bs-body-bg);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 992px) {
   .overlayContainer .logContentContainer {
+    gap: 1.5rem;
     padding: 2rem;
     border-radius: 0.5rem;
   }
 }
 
-.overlayContainer .logContentContainer > .titleBar {
+.overlayContainer .logContentContainer .titleBar {
   min-height: 3.6rem;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  padding: 0 0 0.8rem 0;
+  padding: 0 0.5rem 0.8rem 0.5rem;
   background-color: var(--bs-gray-100);
 }
 
-@media only screen and (min-width: 768px) {
-  .overlayContainer .logContentContainer > .titleBar {
-    align-items: center;
+@media only screen and (min-width: 992px) {
+  .overlayContainer .logContentContainer .titleBar {
     padding: 0.8rem 1rem;
     border-radius: 0.6rem;
   }
@@ -38,15 +38,16 @@
 
 @media only screen and (min-width: 768px) {
   .overlayContainer .logContentContainer > .titleBar {
+    align-items: center;
     flex-direction: row;
   }
 }
 
-:root[data-theme='dark'] .overlayContainer .logContentContainer > .titleBar {
+:root[data-theme='dark'] .overlayContainer .logContentContainer .titleBar {
   background-color: var(--bs-gray-800);
 }
 
-.overlayContainer .logContentContainer > .titleBar .refreshButton {
+.overlayContainer .logContentContainer .titleBar .refreshButton {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,6 +59,6 @@
 
 .logContent {
   min-height: 300px;
-  max-height: 50vh;
+  max-height: 60vh;
   overflow: scroll;
 }
