--- a/src/components/SegmentedTabs.module.css
+++ b/src/components/SegmentedTabs.module.css
@@ -17,6 +17,11 @@
   background-color: var(--bs-gray-800);
 }
 
+:root[data-theme='dark'] .segmented-tabs-lightdark {
+  color: var(--bs-gray-100);
+  background-color: var(--bs-gray-900);
+}
+
 .segmented-tab {
   flex: 1 1 0;
 }
