fix: do not pass css style property to SegmentedTabs

--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -38,6 +38,10 @@
   color: var(--bs-body-color);
 }
 
+:root[data-theme='dark'] .overlayContainer :global .segmented-tabs-hook {
+  background-color: var(--bs-gray-900);
+}
+
 .overlayContainer .tabContainer {
   display: flex;
   flex-direction: column;
