--- a/src/components/jar_details/UtxoList.module.css
+++ b/src/components/jar_details/UtxoList.module.css
@@ -11,6 +11,11 @@
   margin-bottom: 1px;
 }
 
+.utxoList tr.frozen td {
+  color: var(--bs-blue);
+  background-color: rgba(13, 110, 253, 0.07);
+}
+
 .utxoList .utxoIcon > .iconLocked {
   margin-bottom: 3px;
 }
@@ -18,6 +23,7 @@
 .utxoList .utxoTagList {
   display: flex;
   gap: 0.5rem;
+  color: var(--bs-body-color);
 }
 
 .utxoList .utxoConfirmations {
