ui(UtxoList): font and bg color for tags

--- a/src/components/jar_details/UtxoList.module.css
+++ b/src/components/jar_details/UtxoList.module.css
@@ -16,6 +16,10 @@
   background-color: rgba(13, 110, 253, 0.07);
 }
 
+.utxoList tr.frozen td code {
+  color: var(--bs-blue);
+}
+
 .utxoList .utxoIcon > .iconLocked {
   margin-bottom: 3px;
 }
@@ -54,26 +58,25 @@
   padding: 0.1rem 0.3rem;
 }
 
-.utxoList .utxoTagList > .utxoTag > div:first-of-type {
-  width: 0.6rem;
-  height: 0.6rem;
-  border-radius: 0.1rem;
+.utxoList .utxoTagList > .utxoTag.utxoTag-frozen {
+  color: var(--bs-blue);
+  background-color: rgba(13, 110, 253, 0.1);
+  border-color: var(--bs-blue);
 }
-
-.utxoList .utxoTagList > .utxoTag.utxoTag-normal > div:first-of-type {
-  display: none;
+.utxoList .utxoTagList > .utxoTag.utxoTag-success {
+  color: var(--bs-success);
+  background-color: rgba(var(--bs-success-rgb), 0.1);
+  border-color: var(--bs-success);
 }
-
-.utxoList .utxoTagList > .utxoTag.utxoTag-danger > div:first-of-type {
-  background-color: var(--bs-danger);
+.utxoList .utxoTagList > .utxoTag.utxoTag-warning {
+  color: var(--bs-warning);
+  background-color: rgba(var(--bs-warning-rgb), 0.1);
+  border-color: var(--bs-warning);
 }
-
-.utxoList .utxoTagList > .utxoTag.utxoTag-warning > div:first-of-type {
-  background-color: var(--bs-warning);
-}
-
-.utxoList .utxoTagList > .utxoTag.utxoTag-success > div:first-of-type {
-  background-color: var(--bs-success);
+.utxoList .utxoTagList > .utxoTag.utxoTag-danger {
+  color: var(--bs-danger);
+  background-color: rgba(var(--bs-danger-rgb), 0.1);
+  border-color: var(--bs-danger);
 }
 
 .utxoList .utxoListButtonDetails {
