--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -5,6 +5,7 @@
   margin: 0 1rem;
   gap: 0.2rem;
   color: var(--bs-gray-800);
+  min-width: 12ch;
 }
 
 :root[data-theme='dark'] .overlayContainer .accountStepperTitle {
