--- a/src/components/jar_details/UtxoList.module.css
+++ b/src/components/jar_details/UtxoList.module.css
@@ -12,12 +12,9 @@
 }
 
 .utxoList tr.frozen td {
+  --bs-code-color: var(--bs-blue);
   color: var(--bs-blue);
   background-color: rgba(13, 110, 253, 0.07);
-}
-
-.utxoList tr.frozen td code {
-  color: var(--bs-blue);
 }
 
 .utxoList tr .quickFreezeUnfreezeBtn {
@@ -89,6 +86,11 @@
   background-color: rgba(var(--bs-danger-rgb), 0.1);
   border-color: var(--bs-danger);
 }
+.utxoList .utxoTagList > .utxoTag.utxoTag-dark {
+  color: var(--bs-white);
+  background-color: var(--bs-dark);
+  border-color: var(--bs-dark);
+}
 
 .utxoList .utxoListButtonDetails {
   font-size: 0.9rem;
@@ -112,4 +114,16 @@
 
 :root[data-theme='dark'] .utxoList :global tr.row-select-selected > td {
   background-color: var(--bs-gray-800);
+}
+
+.utxoList tr.locked td {
+  --bs-code-color: var(--bs-gray-600);
+  background-color: var(--bs-gray-200);
+  color: var(--bs-gray-600);
+}
+
+:root[data-theme='dark'] .utxoList tr.locked td {
+  --bs-code-color: var(--bs-gray-900);
+  background-color: var(--bs-gray-700);
+  color: var(--bs-gray-900);
 }
