ui(Send): replace dropdown input with JarSelector

--- a/src/components/Send/Send.module.css
+++ b/src/components/Send/Send.module.css
@@ -103,11 +103,6 @@ input[type='number'] {
   color: var(--bs-white) !important;
 }
 
-.select {
-  height: 3.5rem;
-  width: 100%;
-}
-
 .button {
   height: 3rem;
   width: 100%;
@@ -155,4 +150,20 @@ input[type='number'] {
 
 :root[data-theme='dark'] .accordionButton {
   color: var(--bs-white);
+}
+
+.sourceJarsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  color: var(--bs-body-color);
+  margin-bottom: 1.5rem;
+}
+
+.sourceJarsPlaceholder {
+  width: 100%;
+  height: 8rem;
 }
