--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,7 @@ Usage:
 
 :root {
   --bs-font-sans-serif: 'Inter', sans-serif;
+  --bs-code-color: #444;
 }
 
 @supports (font-variation-settings: normal) {
@@ -185,10 +186,6 @@ Usage:
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  color: #444;
 }
 
 html,
@@ -566,11 +563,12 @@ h2 {
 
 /* Theme overrides */
 :root[data-theme='dark'] {
-  --bs-body-color-rgb: var(--bs-white);
+  --bs-body-color-rgb: var(--bs-white-rgb);
   --bs-body-bg-rgb: 33, 37, 41;
   --bs-body-color: var(--bs-white);
   --bs-body-bg: var(--bs-gray-900);
   --bs-border-color: var(--bs-gray-800);
+  --bs-code-color: var(--bs-gray-300);
   --bs-gray-dark: #16191c;
   --bs-black: #000;
 }
@@ -618,10 +616,6 @@ h2 {
 :root[data-theme='dark'] .btn-outline-dark:hover {
   background-color: var(--bs-gray-dark) !important;
   border-color: var(--bs-gray-dark) !important;
-}
-
-:root[data-theme='dark'] code {
-  color: var(--bs-gray-300);
 }
 
 :root[data-theme='dark'] .offcanvas {
