wip(import): disable navbar/earn/jam when rescanning is in progress

--- a/src/components/MainWalletView.module.css
+++ b/src/components/MainWalletView.module.css
@@ -15,6 +15,10 @@
   margin-bottom: 0.45rem;
 }
 
+:global(.jm-rescan-in-progress) .walletHeader {
+  cursor: wait;
+}
+
 :global(.jm-rescan-in-progress) .walletBody {
   filter: blur(2px);
 }
