--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,3 +1,8 @@
+:global(.jm-rescan-in-progress) :global(.center-nav-link),
+:global(.jm-rescan-in-progress) :global(.center-nav-link-divider) {
+  filter: blur(2px);
+}
+
 .balancePlaceholder {
   width: 7.5rem;
 }
