--- a/src/components/Jars.module.css
+++ b/src/components/Jars.module.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
   color: var(--bs-body-color);
 }
@@ -29,7 +29,7 @@
 }
 
 .jarsContainer :global .jar-info-container-hook {
-  align-items: start;
+  align-items: flex-start;
 }
 .jarsContainer :global .jar-balance-container-hook {
   justify-content: start !important;
