fix(import): disable viewing jars on main wallet if rescanning is active

--- a/src/components/MainWalletView.module.css
+++ b/src/components/MainWalletView.module.css
@@ -57,8 +57,8 @@
   height: 2rem;
 }
 
-:global(.jm-rescan-in-progress) .dividerButton {
-  cursor: default;
+.jarsDividerContainer .dividerButton:disabled {
+  cursor: not-allowed;
 }
 
 .sendReceiveButton {
