wip(import): prevent creating new address when rescanning

--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -48,6 +48,14 @@
   min-height: 16.25rem;
 }
 
+:global(.jm-rescan-in-progress) .cardContainer {
+  display: none;
+}
+
+:global(.jm-rescan-in-progress) .receiveForm {
+  filter: blur(2px);
+}
+
 .receive-placeholder-qr-container {
   width: 16.25rem;
 }
