fix(ui): set cursor on unelectable to not-allowed

--- a/src/components/jars/Jar.module.css
+++ b/src/components/jars/Jar.module.css
@@ -75,7 +75,7 @@
 
 .selectableJarContainer:not(.selectable) {
   color: var(--bs-gray-600);
-  cursor: none;
+  cursor: not-allowed;
 }
 
 .selectableJarContainer .selectionCircle {
