--- a/src/index.css
+++ b/src/index.css
@@ -289,6 +289,10 @@ main {
   color: inherit !important;
 }
 
+.text-small {
+  font-size: 0.875rem;
+}
+
 /* Fullscreen Overlays */
 .offcanvas-fullscreen {
   width: 100vw !important;
@@ -484,6 +488,10 @@ h2 {
   z-index: 1200;
 }
 
+.link-secondary:hover {
+  cursor: pointer;
+}
+
 /* Wallets Styles */
 
 .wallets a.wallet-name {
@@ -571,6 +579,7 @@ h2 {
   --bs-code-color: var(--bs-gray-300);
   --bs-gray-dark: #16191c;
   --bs-black: #000;
+  --bs-border-color-translucent: var(--bs-gray-800);
 }
 
 :root[data-theme='dark'] .accordion {
@@ -587,11 +596,6 @@ h2 {
 
 :root[data-theme='dark'] .card {
   background-color: var(--bs-gray-900);
-}
-
-:root[data-theme='dark']
-  .card:not(.border-success):not(.border-danger):not(.border-warning):not(.border-primary):not(.border-info) {
-  border-color: var(--bs-gray-800) !important;
 }
 
 :root[data-theme='dark'] .btn:not(.btn-light) {
