feat: import wallet (#621)
* chore(regtest): do not build tor locally in regtest env

* feat(import): add rescanning param to session request

* feat(api): add rescanblockchain request to JmWalletApi

* feat: add import wallet button to wallets page

* refactor: externalize component PreventLeavingPageByMistake

* refactor: externalize component WalletCreationForm

* wip: use WalletCreationForm in ImportWallet

* refactor: externalize SeedWordInput and rename to MnemonicWordInput

* feat(api): add wallet recover request to JmWalletApi

* build(deps): bump caniuse-lite to v1.0.30001511

* wip(import): start wallet after successful import

* refactor: externalize component WalletCreationConfirmation

* wip(import): use WalletCreationConfirmation view in component WalletImport

* dev(regtest): add funds to dummy wallet during initialization of local setup

* wip(import): update gaplimit before rescanning chain

* wip(import): prevent import if rescan is in progress

* wip(import): ability to customize gaplimit and blockheight

* wip(import): show duration hint when importing wallet

* wip(import): hide sensitive info while importing wallet

* wip(import): reset gaplimit to original value after importing

* wip(import): add description for blockheight and gaplimit

* wip(import): add cancel button to WalletCreationForm

* refactor: externalize component MnemonicPhraseInput

* wip(import): show rescanning indicator on main wallet view

* wip(import): show rescanning indicator in navbar

* wip(import): disable sending when rescanning is in progress

* wip(import): disable navbar/earn/jam when rescanning is in progress

* Update src/i18n/locales/en/translation.json

Co-authored-by: openoms <43343391+openoms@users.noreply.github.com>

* fix(import): disable viewing jars on main wallet if rescanning is active

* wip(import): prevent creating new address when rescanning

* fix(import): reload wallet info after resc

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,3 +1,20 @@
+:global(.jm-rescan-in-progress) :global(.center-nav-link),
+:global(.jm-rescan-in-progress) :global(.center-nav-link-divider) {
+  filter: blur(2px);
+}
+
 .balancePlaceholder {
   width: 7.5rem;
+}
+
+.loadingIndicator {
+  display: none !important;
+}
+
+:global(.jam-reload-wallet-info-in-progress) .walletSprite {
+  display: none !important;
+}
+
+:global(.jam-reload-wallet-info-in-progress) .loadingIndicator {
+  display: inline-block !important;
 }
