--- a/src/index.css
+++ b/src/index.css
@@ -190,11 +190,11 @@ html {
 
 html,
 body,
-#root {
+#root .app {
   min-height: 100vh;
 }
 
-#root {
+#root .app {
   display: flex;
   flex-direction: column;
 }
@@ -435,10 +435,13 @@ footer .cheatsheet-link.nav-link {
   color: transparent;
   text-shadow: 0 0 15px var(--bs-gray-600);
 }
-
 :root[data-theme='dark'] .blurred-text {
   color: transparent;
   text-shadow: 0 0 15px var(--bs-gray-400);
+}
+
+.blurred {
+  filter: blur(2px);
 }
 
 /* Boostrap overrides */
@@ -557,6 +560,10 @@ h2 {
 
 .btn:disabled:hover {
   cursor: not-allowed;
+}
+
+.cursor-wait {
+  cursor: wait;
 }
 
 .accordion {
