--- a/src/components/MainWalletView.module.css
+++ b/src/components/MainWalletView.module.css
@@ -15,6 +15,14 @@
   margin-bottom: 0.45rem;
 }
 
+:global(.jm-rescan-in-progress) .walletHeader {
+  cursor: wait;
+}
+
+:global(.jm-rescan-in-progress) .walletBody {
+  filter: blur(2px);
+}
+
 .jarsPlaceholder {
   width: 100%;
   height: 3.5rem;
@@ -47,6 +55,10 @@
   border-radius: 50%;
   width: 2rem;
   height: 2rem;
+}
+
+.jarsDividerContainer .dividerButton:disabled {
+  cursor: not-allowed;
 }
 
 .sendReceiveButton {
