--- a/src/components/MainWalletView.module.css
+++ b/src/components/MainWalletView.module.css
@@ -62,7 +62,6 @@
 }
 
 .sendReceiveButton {
-  padding: 0.25rem;
   font-weight: 500;
-  border-color: rgba(222, 222, 222, 1) !important;
+  border-color: rgba(222, 222, 222, 1);
 }
