--- a/src/components/MainWalletView.module.css
+++ b/src/components/MainWalletView.module.css
@@ -63,5 +63,9 @@
 
 .sendReceiveButton {
   font-weight: 500;
-  border-color: rgba(222, 222, 222, 1);
+  border-color: var(--bs-border-color) !important;
+}
+
+.sendReceiveButton:hover {
+  border-color: transparent !important;
 }
