--- a/src/index.css
+++ b/src/index.css
@@ -292,6 +292,16 @@ main {
 .text-small {
   font-size: 0.875rem;
 }
+.text-justify {
+  text-align: justify;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+.cursor-wait {
+  cursor: wait;
+}
 
 /* Fullscreen Overlays */
 .offcanvas-fullscreen {
@@ -506,11 +516,6 @@ h2 {
   text-decoration: underline;
 }
 
-.wallets .btn {
-  padding: 0.25rem 1rem;
-  font-weight: 500;
-}
-
 .wallets .btn.btn-outline-dark:not(:hover) {
   border-color: rgba(222, 222, 222, 1);
 }
@@ -551,19 +556,8 @@ h2 {
   }
 }
 
-/* Onboarding */
-
-.onboarding button {
-  height: 3rem;
-  width: 80%;
-}
-
 .btn:disabled:hover {
   cursor: not-allowed;
-}
-
-.cursor-wait {
-  cursor: wait;
 }
 
 .accordion {
