--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,17 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url('./fonts/Inter-Thin.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Thin.woff?v=3.19') format('woff');
+  src:
+    url('./fonts/Inter-Thin.woff2?v=3.19') format('woff2'),
+    url('./fonts/Inter-Thin.woff?v=3.19') format('woff');
 }
 @font-face {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 100;
   font-display: swap;
-  src: url('./fonts/Inter-ThinItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-ThinItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-ThinItalic.woff?v=3.19') format('woff');
 }
 
@@ -20,7 +23,8 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url('./fonts/Inter-ExtraLight.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-ExtraLight.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-ExtraLight.woff?v=3.19') format('woff');
 }
 @font-face {
@@ -28,7 +32,8 @@
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url('./fonts/Inter-ExtraLightItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-ExtraLightItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-ExtraLightItalic.woff?v=3.19') format('woff');
 }
 
@@ -37,14 +42,17 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url('./fonts/Inter-Light.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Light.woff?v=3.19') format('woff');
+  src:
+    url('./fonts/Inter-Light.woff2?v=3.19') format('woff2'),
+    url('./fonts/Inter-Light.woff?v=3.19') format('woff');
 }
 @font-face {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url('./fonts/Inter-LightItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-LightItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-LightItalic.woff?v=3.19') format('woff');
 }
 
@@ -53,7 +61,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('./fonts/Inter-Regular.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-Regular.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-Regular.woff?v=3.19') format('woff');
 }
 @font-face {
@@ -61,7 +70,9 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url('./fonts/Inter-Italic.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Italic.woff?v=3.19') format('woff');
+  src:
+    url('./fonts/Inter-Italic.woff2?v=3.19') format('woff2'),
+    url('./fonts/Inter-Italic.woff?v=3.19') format('woff');
 }
 
 @font-face {
@@ -69,14 +80,17 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('./fonts/Inter-Medium.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Medium.woff?v=3.19') format('woff');
+  src:
+    url('./fonts/Inter-Medium.woff2?v=3.19') format('woff2'),
+    url('./fonts/Inter-Medium.woff?v=3.19') format('woff');
 }
 @font-face {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url('./fonts/Inter-MediumItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-MediumItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-MediumItalic.woff?v=3.19') format('woff');
 }
 
@@ -85,7 +99,8 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('./fonts/Inter-SemiBold.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-SemiBold.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-SemiBold.woff?v=3.19') format('woff');
 }
 @font-face {
@@ -93,7 +108,8 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url('./fonts/Inter-SemiBoldItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-SemiBoldItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-SemiBoldItalic.woff?v=3.19') format('woff');
 }
 
@@ -102,14 +118,17 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('./fonts/Inter-Bold.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Bold.woff?v=3.19') format('woff');
+  src:
+    url('./fonts/Inter-Bold.woff2?v=3.19') format('woff2'),
+    url('./fonts/Inter-Bold.woff?v=3.19') format('woff');
 }
 @font-face {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url('./fonts/Inter-BoldItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-BoldItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-BoldItalic.woff?v=3.19') format('woff');
 }
 
@@ -118,7 +137,8 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url('./fonts/Inter-ExtraBold.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-ExtraBold.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-ExtraBold.woff?v=3.19') format('woff');
 }
 @font-face {
@@ -126,7 +146,8 @@
   font-style: italic;
   font-weight: 800;
   font-display: swap;
-  src: url('./fonts/Inter-ExtraBoldItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-ExtraBoldItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-ExtraBoldItalic.woff?v=3.19') format('woff');
 }
 
@@ -135,14 +156,17 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url('./fonts/Inter-Black.woff2?v=3.19') format('woff2'), url('./fonts/Inter-Black.woff?v=3.19') format('woff');
+  src:
+    url('./fonts/Inter-Black.woff2?v=3.19') format('woff2'),
+    url('./fonts/Inter-Black.woff?v=3.19') format('woff');
 }
 @font-face {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 900;
   font-display: swap;
-  src: url('./fonts/Inter-BlackItalic.woff2?v=3.19') format('woff2'),
+  src:
+    url('./fonts/Inter-BlackItalic.woff2?v=3.19') format('woff2'),
     url('./fonts/Inter-BlackItalic.woff?v=3.19') format('woff');
 }
 
@@ -273,11 +297,36 @@ main {
 .slashed-zeroes {
   font-family: Inter;
   font-weight: 400;
-  font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
-  -moz-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
-  -ms-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
-  -webkit-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
-  -o-font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on, 'case' on, 'calt' off;
+  font-feature-settings:
+    'tnum' on,
+    'lnum' on,
+    'zero' on,
+    'case' on,
+    'calt' off;
+  -moz-font-feature-settings:
+    'tnum' on,
+    'lnum' on,
+    'zero' on,
+    'case' on,
+    'calt' off;
+  -ms-font-feature-settings:
+    'tnum' on,
+    'lnum' on,
+    'zero' on,
+    'case' on,
+    'calt' off;
+  -webkit-font-feature-settings:
+    'tnum' on,
+    'lnum' on,
+    'zero' on,
+    'case' on,
+    'calt' off;
+  -o-font-feature-settings:
+    'tnum' on,
+    'lnum' on,
+    'zero' on,
+    'case' on,
+    'calt' off;
 }
 
 .break-word {
