--- a/src/components/fb/FidelityBondSteps.module.css
+++ b/src/components/fb/FidelityBondSteps.module.css
@@ -11,12 +11,8 @@
   gap: 2rem;
 }
 
-.jarsContainer :global .balance-value-hook {
-  font-size: 0.7rem;
-}
-
-.jarsContainer :global .balance-symbol-hook {
-  font-size: 0.7rem;
+.jarsContainer :global .balance-hook {
+  font-size: 0.75rem;
 }
 
 @media only screen and (min-width: 768px) {
