--- a/src/components/jars/Jar.module.css
+++ b/src/components/jars/Jar.module.css
@@ -58,6 +58,10 @@
   font-size: 0.8rem;
 }
 
+.frozen.jarBalance {
+  font-size: 0.7rem;
+}
+
 .selectableJarContainer {
   display: flex;
   flex-direction: column;
